[tool.poetry]
name = "twitter auto post bot"
version = "0.1.0"
description = "Post sentences to Twitter at set times."
authors = ["nijigen_plot"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.8.0"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
